# aoc-2022-day-5-part-1-malena_ken

./: Cargo.toml  README.md  input.txt
