[package]
name = "aoc-2022-day-5"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
